fix: [TAE-242] fix sonar issue